# qaspen

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  qaspen.toml
.github/workflows/: testing.yml
qaspen/: __init__.py  __main__.py  config.py  exceptions.py  qaspen_types.py  query_result.py  test.py
qaspen/abc/: __init__.py  abc_types.py  db_engine.py  db_transaction.py
qaspen/aggregate_functions/: __init__.py  base.py  functions.py  general_purpose.py
qaspen/base/: __init__.py  comparison_operators.py  operators.py  sql.py  sql_base.py  text.py
qaspen/clauses/: __init__.py  filter.py  group_by.py  order_by.py
qaspen/columns/: __init__.py  aliases.py  base.py  complex.py  primitive.py
qaspen/engine/: __init__.py  base.py  base_engine.py  enums.py  psycopg_engine.py  psycopgpool_engine.py
qaspen/field/: __init__.py  base_field.py
qaspen/field/string_fields/: __init__.py  varchar.py
qaspen/fields/: __init__.py  aliases.py  base.py  base_field.py  comparisons.py  complex.py  consts.py  datetime_fields.py  fields.py  integer_fields.py  json_types.py  operators.py  primitive.py  string_fields.py  utils.py
qaspen/fields/base/: __init__.py  base_field.py
qaspen/fields/integer_fields/: __init__.py
qaspen/fields/string_fields/: fields.py  utils.py
qaspen/migrations/: __init__.py  cli.py  inheritance.py  manager.py  migration.py  migration_creator.py  settings.py
qaspen/migrations/migration_template/: template.py.jinja
qaspen/migrations/operations/: __init__.py  base_operation.py  create_field.py  create_table.py  delete_table.py  field_operations.py  table_operations.py
qaspen/operators/: __init__.py  any.py
qaspen/querystring/: __init__.py  querystring.py
qaspen/sql_type/: __init__.py  base.py  complex_types.py  mapper.py  primitive_types.py
qaspen/statement/: __init__.py  enums.py  statement.py
qaspen/statements/: base.py  delete_statement.py  exists_statement.py  insert_statement.py  intersect_statement.py  select_statement.py  statement.py  union_statement.py  update_statement.py
qaspen/statements/combinable_statements/: __init__.py  combinations.py  filter_statement.py  join_statement.py  order_by_statement.py  union_statement.py  where_statement.py
qaspen/statements/common/: where_statement.py
qaspen/statements/statement_result/: __init__.py  base_result.py  result_variants.py  select_result.py  select_statement_result.py
qaspen/statements/sub_statements/: __init__.py  group_by_statement.py  limit_statement.py  offset_statement.py  order_by_statement.py  where_statement.py
qaspen/table/: __init__.py  base_table.py  meta_table.py
qaspen/utils/: __init__.py  column_utils.py  engine_utils.py  fields_utils.py  general_utils.py
tests/: __init__.py  conftest.py  test_default.py  test_utils.py
tests/test_agg_functions/: __init__.py  conftest.py  test_general_purpose.py
tests/test_base/: __init__.py  test_sql_base.py
tests/test_columns/: __init__.py  conftest.py  test_base.py  test_complex.py  test_primitive.py
tests/test_fields/: conftest.py  test_base.py  test_complex.py  test_primitive.py
tests/test_fields/base_test/: __init__.py  conftest.py  test_base.py
tests/test_fields/primitive_test/: __init__.py  test_primitive.py
tests/test_querystring/: __init__.py  test_querystring.py
tests/test_sql_type/: __init__.py  test_mapper.py
tests/test_statements/: __init__.py  conftest.py  test_combinations.py  test_delete_statement.py  test_exists_statement.py  test_filter_statement.py  test_group_by_statement.py  test_intersect_statement.py  test_join_statement.py  test_limit_statement.py  test_offset_statement.py  test_order_by_statement.py  test_select_statement_methods.py  test_union_statement.py  test_update_statement.py
tests/test_table/: __init__.py  conftest.py  test_base_table.py  test_meta_table.py
(+10 files in other folders)
