[tool.poetry]
name = "qaspen"
version = "0.0.9a"
description = ""
authors = ["chandr-andr (Kiselev Aleksandr) <askiselev00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
pydantic = "^2.4.2"
msgspec = "^0.18.4"

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
ruff = "^0.1.2"
isort = "^5.12.0"
black = "^23.10.1"
pytest = "^7.4.3"
pre-commit = "^3.5.0"
autoflake = "^2.2.1"
yesqa = "^1.5.0"
typing-extensions = "^4.8.0"
anyio = "^4.0.0"
pytest-xdist = "^3.3.1"
pytest-cov = "^4.1.0"
qaspen-psycopg = "^0.0.5a0"
yarl = "^1.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
select = ["ALL"]
fixable = ["ALL"]
ignore = ["ANN401", "D100", "D107", "SLF001", "D105", "TRY003", "PLR0913", "FBT001", "FBT002", "S608", "S101"]
exclude = ["qaspen/fields/operators.py"]

[tool.black]
line-length = 79

[tool.mypy]
strict = true

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79

[tool.coverage.run]
omit = ["qaspen/abc/*", "qaspen/_test.py"]

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "# pragma: no cover",
]
